Backward compatible with java 11